# knowledge-platform

./: .gitignore  README.md  docker-compose.yml  tasks.json
.claude/: settings.local.json
.claude/agents/: backend-developer.md  frontend-developer.md  pm.md  qa-specialist.md
backend/: .env.example  API_GUIDE.md  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  README.md  SETUP_GUIDE.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_password_hash.py
backend/api/: index.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: articles.py  auth.py  bookmarks.py  interactions.py  search.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  article.py  interaction.py  interest.py  user.py
backend/app/schemas/: article.py  common.py  user.py
backend/app/services/: article_processor.py  recommendation.py  wikipedia.py
backend/app/tests/: conftest.py  test_auth.py  test_bookmarks.py  test_feed.py  test_search.py
docs/: PROGRESS.md  STORY_TEMPLATE.md
docs/stories/: STORY-001.md  STORY-002.md  STORY-003.md  STORY-004.md  STORY-005.md
frontend/: .env.example  .gitignore  ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/messages/: en.json  ru.json  uk.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  providers.tsx
frontend/src/hooks/: useArticles.ts  (+4 more)
(+36 files in other folders)
